adding progress bar

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -25,5 +25,5 @@
 }
 
 .nav-button {
-  @apply bg-gporange text-white font-bold py-2 px-4 rounded-2xl;
+  @apply bg-gporangelight text-white font-bold py-2 px-4 rounded-2xl;
 }
