--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -72,6 +72,21 @@ body {
   box-shadow: 0 0 -4px 0 rgba(0, 0, 0, 0.25);
 }
 
+.scroll-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: transparent;
+  .progress-bar {
+    background-color: #ff8100;
+    height: 3px;
+    width: 0%;
+    transition: width 0.1s ease;
+  }
+}
+
 .absolute-full {
   @apply absolute top-0 left-0 w-full h-full;
 }
