--- a/src/styles/utilities/enform.scss
+++ b/src/styles/utilities/enform.scss
@@ -118,9 +118,8 @@
 .en__field__error {
   font-size: 10px;
   color: #ff6666;
-  position: absolute;
-  left: 0.5rem;
-  bottom: -1rem;
+  display: inline-block;
+  padding-left: 0.5rem;
 }
 .eaErrorMessage {
   text-align: left;
